--- a/index.html
+++ b/index.html
@@ -92,6 +92,28 @@
         </div>
     </section>
 
+    <div class="cards">
+        <div class="card">
+            <img class="card_img" src="assets/images/ellipse_23.svg" alt="">
+            <div class="card_title">“Ты не прав, потому что ты близнецы”</div>
+            <div class="card_text">Верны ли характеристики знаков зодиака?</div>
+            <a href="#" class="card_link">читать далее ></a>
+        </div>
+        <div class="card">
+            <img class="card_img" src="assets/images/ellipse_6.svg" alt="">
+            <div class="card_title">Смутное время
+            </div>
+            <div class="card_text">Коридор затмений и его влияние - выдумка?</div>
+            <a href="#" class="card_link">читать далее ></a>
+        </div>
+        <div class="card">
+            <img class="card_img" src="assets/images/ellipse_20.svg" alt="">
+            <div class="card_title">Новость дня</div>
+            <div class="card_text">Водолеи и рыбы получат 10</div>
+            <a href="#" class="card_link">читать далее ></a>
+        </div>
+    </div>
+
     <section data-bs-version="5.1" class="footer7 cid-sQOIJWr1a0" once="footers" id="footer7-n">
 
 
