--- a/index.html
+++ b/index.html
@@ -114,22 +114,10 @@
         </div>
     </div>
 
-    <section data-bs-version="5.1" class="footer7 cid-sQOIJWr1a0" once="footers" id="footer7-n">
-
-
-
-
-
-        <div class="container">
-            <div class="media-container-row align-center mbr-white">
-                <div class="col-12">
-                    <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                        © Copyright 2025 Mobirise - All Rights Reserved
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
+    <footer>
+        <div class="footer_logo"><img src="assets/images/group-280.svg" alt="logo"></div>
+        <div class="footer_copyright">Copyright © 2021 — 2021 Centavra</div>
+    </footer>
     <section
         style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: none;">
         <a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
