--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="collapse navbar-collapse " id="navbarSupportedContent">
                     <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
                         <li class="nav-item"><a class="nav-link link text-black text-primary display-4"
-                                href="page1.html">Новости</a></li>
+                                href="#news">Новости</a></li>
                         <li class="nav-item"><a class="nav-link link text-black display-4"
                                 href="https://mobirise.com">Гороскопы</a></li>
                         <li class="nav-item"><a class="nav-link link text-black display-4"
@@ -92,7 +92,7 @@
         </div>
     </section>
 
-    <div class="cards">
+    <div class="cards" id="news">
         <div class="card">
             <img class="card_img" src="assets/images/ellipse_23.svg" alt="">
             <div class="card_title">“Ты не прав, потому что ты близнецы”</div>
