--- a/page1.html
+++ b/page1.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="assets/dropdown/css/style.css">
     <link rel="stylesheet" href="assets/socicon/css/styles.css">
     <link rel="stylesheet" href="assets/theme/css/style.css">
+    <link rel="stylesheet" href="assets/custom/styles.css">
+
     <link rel="preload"
         href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"
         as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -98,22 +100,10 @@
         </div>
     </section>
 
-    <section data-bs-version="5.1" class="footer7 cid-sQOIJWr1a0" once="footers" id="footer7-q">
-
-
-
-
-
-        <div class="container">
-            <div class="media-container-row align-center mbr-white">
-                <div class="col-12">
-                    <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                        © Copyright 2025 Mobirise - All Rights Reserved
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
+    <footer>
+        <div class="footer_logo"><img src="assets/images/group-280.svg" alt="logo"></div>
+        <div class="footer_copyright">Copyright © 2021 — 2021 Centavra</div>
+    </footer>
     <section
         style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: none;">
         <a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
