--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
 
     <div class="cards" id="news">
         <div class="card">
+            <img class="card_img" src="assets/images/ellipse_20.svg" alt="">
+            <div class="card_title">Новость дня</div>
+            <div class="card_text">Водолеи и рыбы получат 10</div>
+            <a href="#" class="card_link">читать далее ></a>
+        </div>
+        <div class="card">
             <img class="card_img" src="assets/images/ellipse_23.svg" alt="">
             <div class="card_title">“Ты не прав, потому что ты близнецы”</div>
             <div class="card_text">Верны ли характеристики знаков зодиака?</div>
@@ -104,13 +110,7 @@
             <div class="card_title">Смутное время
             </div>
             <div class="card_text">Коридор затмений и его влияние - выдумка?</div>
-            <a href="#" class="card_link">читать далее ></a>
-        </div>
-        <div class="card">
-            <img class="card_img" src="assets/images/ellipse_20.svg" alt="">
-            <div class="card_title">Новость дня</div>
-            <div class="card_text">Водолеи и рыбы получат 10</div>
-            <a href="#" class="card_link">читать далее ></a>
+            <a href="/page1.html" class="card_link">читать далее ></a>
         </div>
     </div>
 
