--- a/page1.html
+++ b/page1.html
@@ -75,17 +75,18 @@
 
     </section>
 
-    <section data-bs-version="5.1" class="video2 cid-sQOJulZqeK" id="video2-r">
+    <section data-bs-version="5.1" class="video2 cid-sQOJulZqeK video_screen" id="video2-r">
 
 
         <div class="container">
             <div class="mbr-section-head">
-                <h4 class="mbr-section-title mbr-fonts-style mb-0 display-2"><strong>Коридор затмений — выдумка или
-                    </strong><br><strong>реальное влияние на людей?</strong></h4>
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-0 mt-2 display-7"><br>Сегодня среди молодежи все чаще
-                    можно услышать о коридоре затмений и ретроградном меркурии, <br>которые, по словам молодых людей,
-                    негативно влияют на продуктивность, эмоциональное состояние, <br>удачу и самочувствие. Наш
-                    корреспондент взял интервью у профессионалов — психолога, физика <br>и астролога, чтобы разобраться,
+                <h4 class="mbr-section-title mbr-fonts-style mb-0 display-2"><strong>Смутное время<br />
+                        Коридор затмений и его влияние - выдумка?</strong></h4>
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-0 mt-2 display-7"
+                    style="max-width: 1000px; margin: 0 auto;"><br>Сегодня среди молодежи все чаще
+                    можно услышать о коридоре затмений и ретроградном меркурии, которые, по словам молодых людей,
+                    негативно влияют на продуктивность, эмоциональное состояние, удачу и самочувствие. Наш
+                    корреспондент взял интервью у профессионалов — психолога, физика и астролога, чтобы разобраться,
                     действительно ли движение небесных тел так влияет на наше состояние.<div><br></div>
                 </h5>
             </div>
