--- a/page2.html
+++ b/page2.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
 
 
-    <title>Home</title>
+    <title>Репортаж</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="assets/socicon/css/styles.css">
     <link rel="stylesheet" href="assets/theme/css/style.css">
     <link rel="stylesheet" href="assets/custom/styles.css">
+
     <link rel="preload"
         href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"
         as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -36,7 +37,7 @@
 
 <body>
 
-    <section data-bs-version="5.1" class="menu cid-s48OLK6784" once="menu" id="menu1-h">
+    <section data-bs-version="5.1" class="menu cid-s48OLK6784" once="menu" id="menu1-p">
 
         <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
             <div class="container">
@@ -57,14 +58,12 @@
                         <span></span>
                     </div>
                 </button>
-                <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
                         <li class="nav-item"><a class="nav-link link text-black text-primary display-4"
-                                href="#news">Новости</a></li>
+                                href="page1.html">Новости</a></li>
                         <li class="nav-item"><a class="nav-link link text-black display-4"
                                 href="https://mobirise.com">Гороскопы</a></li>
-                        <li class="nav-item"><a class="nav-link link text-black display-4"
-                                href="https://mobirise.com">Тик-ток</a></li>
                         <li class="nav-item"><a class="nav-link link text-black display-4"
                                 href="https://mobirise.com">Контакты</a></li>
                     </ul>
@@ -76,45 +75,37 @@
 
     </section>
 
-    <section>
-        <img src="assets/images/gradient.svg" alt="" class="background_gradient">
-    </section>
+    <section data-bs-version="5.1" class="video2 cid-sQOJulZqeK video_screen" id="video2-r">
 
-    <section class="head_screen">
-        <div class="about">CENTAVRA — медиа про астрологию и её роль в жизни зумеров. Мы исследуем, как в эпоху развития
-            технологий нас все больше
-            затягивают древние ритуалы, как они видоизменяются в сознании молодёжи и стоит ли доверять Ретроградному
-            Меркурию.
-        </div>
-        <div class="fresh_news">
-            <div class="fresh_news_title">Свежие новости</div>
-            <a href='#' class="fresh_news_link">Коридор затмений — выдумка?</a>
-            <a href='#' class="fresh_news_link">Астрология – новый писк моды</a>
-            <a href='#' class="fresh_news_link">Новость дня: Водолеи и рыбы получат 10</a>
-        </div>
-    </section>
 
-    <div class="cards" id="news">
-        <div class="card">
-            <img class="card_img" src="assets/images/ellipse_20.svg" alt="">
-            <div class="card_title">Новость дня</div>
-            <div class="card_text">Водолеи и рыбы получат 10</div>
-            <a href="#" class="card_link">читать далее ></a>
-        </div>
-        <div class="card">
-            <img class="card_img" src="assets/images/ellipse_23.svg" alt="">
-            <div class="card_title">“Ты не прав, потому что ты близнецы”</div>
-            <div class="card_text">Верны ли характеристики знаков зодиака?</div>
-            <a href="/page2.html" class="card_link">читать далее ></a>
-        </div>
-        <div class="card">
-            <img class="card_img" src="assets/images/ellipse_6.svg" alt="">
-            <div class="card_title">Смутное время
+        <div class="container">
+            <div class="mbr-section-head">
+                <h4 class="mbr-section-title mbr-fonts-style mb-0 display-2"><strong>“Ты не прав, потому что ты
+                        близнецы”<br />
+                        Верны ли характеристики знаков зодиака?
+                    </strong></h4>
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-0 mt-2 display-7"
+                    style="max-width: 1000px; margin: 0 auto;"><br />Звездная тема существовала
+                    всегда,
+                    однако сейчас волна популярности такого явления, как астрология, вспыхнула среди
+                    поколения зумеров. Тик Ток буквально заполонил видео об асцендентах, натальных картах, гаданиях на
+                    таро и шуточными (а
+                    может и нет) видео о том, какой тренд стоит попробовать каждому знаку зодиака. Мы вышли на улицы
+                    города Москва, чтобы
+                    опросить молодых людей и выяснить их мнение относительно астрологии, считают ли ее новым модным
+                    трендом.<div><br></div>
+                </h5>
             </div>
-            <div class="card_text">Коридор затмений и его влияние - выдумка?</div>
-            <a href="/page1.html" class="card_link">читать далее ></a>
+            <div class="row justify-content-center mt-4">
+                <div class="col-12 col-md-9 video-block">
+                    <div class="video-wrapper"><iframe class="mbr-embedded-video"
+                            src="https://www.youtube.com/embed/HujDEPAWboE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0"
+                            width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+
+                </div>
+            </div>
         </div>
-    </div>
+    </section>
 
     <footer>
         <div class="footer_logo"><img src="assets/images/group-280.svg" alt="logo"></div>
@@ -122,14 +113,15 @@
     </footer>
     <section
         style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: none;">
-        <a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
-        <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with <a href="https://mobirise.site/a"
-                style="color:#aaa;">Mobirise</a></p>
+        <a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
+        <p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/i"
+                style="color:#aaa;">Built with Mobirise</a> builder</p>
     </section>
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/smoothscroll/smooth-scroll.js"></script>
     <script src="assets/ytplayer/index.js"></script>
     <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+    <script src="assets/playervimeo/vimeo_player.js"></script>
     <script src="assets/theme/js/script.js"></script>
 
 
