--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section data-bs-version="5.1" class="menu cid-s48OLK6784" once="menu" id="menu1-h">
 
-        <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
+        <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg" style="border: none;">
             <div class="container">
                 <div class="navbar-brand">
                     <span class="navbar-logo">
@@ -58,17 +58,23 @@
                     </div>
                 </button>
                 <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                    <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
-                        <li class="nav-item"><a class="nav-link link text-black text-primary display-4"
-                                href="#news">Новости</a></li>
-                        <li class="nav-item"><a class="nav-link link text-black display-4"
+                    <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"
+                        style="position: relative;">
+                        <li class="nav-item"><a id="menu-link-1" class="nav-link link text-black text-primary display-4"
+                                href="#">Новости <div class="dropdown_arrow"></div></a></li>
+                        <li class="nav-item"><a id="menu-link-2" class="nav-link link text-black display-4"
                                 href="https://mobirise.com">Гороскопы</a></li>
-                        <li class="nav-item"><a class="nav-link link text-black display-4"
+                        <li class="nav-item"><a id="menu-link-3" class="nav-link link text-black display-4"
                                 href="https://mobirise.com">Тик-ток</a></li>
-                        <li class="nav-item"><a class="nav-link link text-black display-4"
+                        <li class="nav-item"><a id="menu-link-4" class="nav-link link text-black display-4"
                                 href="https://mobirise.com">Контакты</a></li>
+                        <div id="news-menu" class="fresh_news">
+                            <div class="fresh_news_title">Свежие новости</div>
+                            <a href='#' class="fresh_news_link">Коридор затмений — выдумка?</a>
+                            <a href='#' class="fresh_news_link">Астрология – новый писк моды</a>
+                            <a href='#' class="fresh_news_link">Новость дня: Водолеи и рыбы получат 10</a>
+                        </div>
                     </ul>
-
 
                 </div>
             </div>
@@ -86,12 +92,7 @@
             затягивают древние ритуалы, как они видоизменяются в сознании молодёжи и стоит ли доверять Ретроградному
             Меркурию.
         </div>
-        <div class="fresh_news">
-            <div class="fresh_news_title">Свежие новости</div>
-            <a href='#' class="fresh_news_link">Коридор затмений — выдумка?</a>
-            <a href='#' class="fresh_news_link">Астрология – новый писк моды</a>
-            <a href='#' class="fresh_news_link">Новость дня: Водолеи и рыбы получат 10</a>
-        </div>
+
     </section>
 
     <div class="cards" id="news">
@@ -131,6 +132,7 @@
     <script src="assets/ytplayer/index.js"></script>
     <script src="assets/dropdown/js/navbar-dropdown.js"></script>
     <script src="assets/theme/js/script.js"></script>
+    <script src="assets/custom/main.js"></script>
 
 
 </body>
