--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                                 href="https://mobirise.com">Контакты</a></li>
                         <div id="news-menu" class="fresh_news">
                             <div class="fresh_news_title">Свежие новости</div>
-                            <a href='#' class="fresh_news_link">Коридор затмений — выдумка?</a>
-                            <a href='#' class="fresh_news_link">Астрология – новый писк моды</a>
+                            <a href='/page1.html' class="fresh_news_link">Коридор затмений — выдумка?</a>
+                            <a href='/page2.html' class="fresh_news_link">Астрология – новый писк моды</a>
                             <a href='#' class="fresh_news_link">Новость дня: Водолеи и рыбы получат 10</a>
                         </div>
                     </ul>
