--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                                 href="https://mobirise.com">Контакты</a></li>
                         <div id="news-menu" class="fresh_news">
                             <div class="fresh_news_title">Свежие новости</div>
-                            <a href='/page1.html' class="fresh_news_link">Коридор затмений — выдумка?</a>
-                            <a href='/page2.html' class="fresh_news_link">Астрология – новый писк моды</a>
+                            <a href='page1.html' class="fresh_news_link">Коридор затмений — выдумка?</a>
+                            <a href='page2.html' class="fresh_news_link">Астрология – новый писк моды</a>
                             <a href='#' class="fresh_news_link">Новость дня: Водолеи и рыбы получат 10</a>
                         </div>
                     </ul>
@@ -106,14 +106,14 @@
             <img class="card_img" src="assets/images/ellipse_23.svg" alt="">
             <div class="card_title">“Ты не прав, потому что ты близнецы”</div>
             <div class="card_text">Верны ли характеристики знаков зодиака?</div>
-            <a href="/page2.html" class="card_link">читать далее ></a>
+            <a href="page2.html" class="card_link">читать далее ></a>
         </div>
         <div class="card">
             <img class="card_img" src="assets/images/ellipse_6.svg" alt="">
             <div class="card_title">Смутное время
             </div>
             <div class="card_text">Коридор затмений и его влияние - выдумка?</div>
-            <a href="/page1.html" class="card_link">читать далее ></a>
+            <a href="page1.html" class="card_link">читать далее ></a>
         </div>
     </div>
 
