--- a/page1.html
+++ b/page1.html
@@ -73,8 +73,8 @@
                                 href="https://mobirise.com">Контакты</a></li>
                         <div id="news-menu" class="fresh_news">
                             <div class="fresh_news_title">Свежие новости</div>
-                            <a href='/page1.html' class="fresh_news_link">Коридор затмений — выдумка?</a>
-                            <a href='/page2.html' class="fresh_news_link">Астрология – новый писк моды</a>
+                            <a href='page1.html' class="fresh_news_link">Коридор затмений — выдумка?</a>
+                            <a href='page2.html' class="fresh_news_link">Астрология – новый писк моды</a>
                             <a href='#' class="fresh_news_link">Новость дня: Водолеи и рыбы получат 10</a>
                         </div>
                     </ul>
@@ -128,6 +128,7 @@
     <script src="assets/dropdown/js/navbar-dropdown.js"></script>
     <script src="assets/playervimeo/vimeo_player.js"></script>
     <script src="assets/theme/js/script.js"></script>
+    <script src="assets/custom/main.js"></script>
 
 
 </body>
