--- a/page2.html
+++ b/page2.html
@@ -134,6 +134,7 @@
     <script src="assets/dropdown/js/navbar-dropdown.js"></script>
     <script src="assets/playervimeo/vimeo_player.js"></script>
     <script src="assets/theme/js/script.js"></script>
+    <script src="assets/custom/main.js"></script>
 
 
 </body>
